# opengl-hask

./: README.md  opengl-hask.cabal
app/: Main.hs
resources/Zigzagoon/: Tag.txt  Zigzagoon.SMD
resources/Zigzagoon/anims/: Action.smd  Bounce.smd
