cabal-version:      2.4
name:               opengl-hask
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sean Russell
maintainer:         seanlucrussell@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
-- with-compiler:         GHC >=9.0

executable opengl-hask
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,linear-base,sdl2,OpenGLRaw,finite-typelits,array,random,template-haskell,megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
